[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "breakn"
version = "0.1.0"
description = "Break out of multiple nested loops at once."
readme = "README.md"
authors = [{ name = "Manan Pal Singh", email = "dev@mananpalsingh.in" }]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
packages = ["breakn"]

[project.optional-dependencies]
typing = ["typing_extensions; python_version<'3.10'"]

[project.urls]
Homepage = "https://github.com/mananpal1997/breakn"
Repository = "https://github.com/mananpal1997/breakn"
Issues = "https://github.com/mananpal1997/breakn/issues"
